[package]
name = "dave"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.dev.package."*"]
opt-level = 3


[dependencies]
macroquad = {path = "./macroquad", features = ["audio"]}
macroquad_macro = {path = "./macroquad/macroquad_macro"}
macroquad-tiled = {path = "./macroquad/tiled"}
macroquad-platformer = {path = "./macroquad/physics-platformer"}



