[package]
name = "dave"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.dev.package."*"]
opt-level = 3

#[dev-dependencies]
#egui_demo_lib = { version = "0.28", default-features = false }

[dependencies]
# macroquad = {path = "./macroquad", features = ["audio"]}
# macroquad_macro = {path = "./macroquad/macroquad_macro"}
# macroquad-tiled = {path = "./macroquad/tiled"}
macroquad-tiled = {path = "./tiled"}
# macroquad-platformer = {path = "./macroquad/physics-platformer"}
# macroquad-particles = {path = "./macroquad/particles"}

macroquad = {version = "0.4.13", features = ["audio"]}
macroquad_macro = "0.1.8"
# macroquad-tiled = " 0.2.1"
macroquad-platformer = "0.2.0"
macroquad-particles = "0.2.2"

glob = "0.3.2"
#glam = "0.30.0"
